# hw_31

./: pyproject.toml
ads/: ad_urls.py  models.py  permissions.py  selection_urls.py  serializer.py  views.py
ads/migrations/: 0001_initial.py  0002_initial.py
hw_31/: asgi.py  settings.py  urls.py  wsgi.py
tests/ads/: ad_retrieve_test.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
